# build-prove-compare-student-code

./: .gitignore
exercises/ch1/: 1.10.2-1c.impcore  1.10.2-2.impcore  1.10.2-3.impcore
tree-sitter/tree-sitter-impcore/: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter/tree-sitter-impcore/bindings/node/: binding.cc  index.js
tree-sitter/tree-sitter-impcore/bindings/rust/: lib.rs
tree-sitter/tree-sitter-impcore/queries/: highlights.scm
tree-sitter/tree-sitter-impcore/src/: grammar.json  node-types.json  parser.c
tree-sitter/tree-sitter-impcore/test/corpus/: definitions.txt  expressions.txt  extras.txt  literals.txt
tree-sitter/tree-sitter-impcore/test/highlight/: comments.impcore  definitions.impcore  expressions.impcore
